<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhatToDo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="WhatToDo">WHAT TO DO</string>
    <string name="LogIn">LOG IN</string>
    <string name="Register">REGISTER</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="goBack">GO BACK</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="title_activity_list">ListActivity</string>

</resources>
