<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ff3e00"
    tools:context="com.yhack.whattodo.RegisterActivity" >
    
     <Button
        android:id="@+id/GoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:background="#ffffff"
        android:onClick="goBack"
        android:text="@string/goBack"
        android:width="100sp" />

     <EditText
         android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/username"
         android:layout_centerVertical="true"
         android:ems="10"
         android:inputType="textPassword"
         android:hint="@string/password"
         android:textColor="#ffffff" />

     <Button
         android:id="@+id/RegisterButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/GoBack"
         android:layout_alignBottom="@+id/GoBack"
         android:layout_alignParentRight="true"
         android:background="#ffffff"
         android:text="@string/Register"
         android:width="100sp" />

     <EditText
         android:id="@+id/FirstName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/username"
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="14dp"
         android:ems="10"
         android:hint="@string/FirstName"
         android:inputType="textPersonName"
         android:textColor="#ffffff" />

     <EditText
         android:id="@+id/LastName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/FirstName"
         android:layout_alignLeft="@+id/FirstName"
         android:layout_marginBottom="22dp"
         android:ems="10"
         android:hint="@string/LastName"
         android:inputType="textPersonName"
         android:textColor="#ffffff" />

     <EditText
         android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/password"
         android:layout_alignLeft="@+id/FirstName"
         android:layout_marginBottom="20dp"
         android:ems="10"
         android:hint="@string/user_name"
         android:textColor="#ffffff" >

         <requestFocus />
     </EditText>

</RelativeLayout>
