<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff3e00"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yhack.whattodo.LogInActivity" >

    <Button
        android:id="@+id/GoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:background="#ffffff"
        android:onClick="goBack"
        android:text="@string/goBack"
        android:width="100sp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="103dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textColor="#ffffff" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Username"
        android:layout_below="@+id/Username"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/GoBack"
        android:layout_alignBottom="@+id/GoBack"
        android:layout_alignParentRight="true"
        android:background="#ffffff"
        android:onClick="logInUser"
        android:text="@string/LogIn"
        android:width="100sp"
        android:textColor="#000000" />

</RelativeLayout>